--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Reproducible Research: Peer Assessment 1"
-author: "Rishabh Karmakar"
+author: "Ketki Nirantar"
 output: 
   html_document:
     keep_md: true
